@@ -1,3 +1,8 @@
+2002-08-27  Ulrich Drepper  <drepper@redhat.com>
+
+	* nss/getXXbyYY_r.c (REENTRANT_NAME): If no service is available
+	set h_errno to NO_RECOVERY [PR libc/4360].
+
 2002-08-26  Ulrich Drepper  <drepper@redhat.com>
 
 	* libio/Makefile (tests): Add bug-fopena+.
